# mipal-analytics

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  start-dev.sh
backend/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/agents/: base_agent.py
backend/app/analytics/: README.md  errors.py
backend/app/analytics/agents/: __init__.py
backend/app/analytics/agents/chart/: __init__.py  chart_adjustment.py  chart_generation.py
backend/app/analytics/agents/refrence_code_chart_agents/: chart.py  chart_adjustment.py  chart_generation.py  (+3 more)
backend/app/analytics/api/: converters.py  dependencies.py  dto.py  handlers.py  routes.py
backend/app/analytics/entity/: analytics.py  chart.py  dashboard.py  dataframe.py
backend/app/analytics/repository/: analytics_repository.py  chart_repository.py  dashboard_repository.py
backend/app/analytics/scripts/: dataframe.py  excel_code_exec.py  excel_parsing.py  performance_testing.py  test_data.xlsx
backend/app/analytics/service/: README.md  analytics_service.py  chart_generation_service.py  chart_queue_service.py  chart_service.py  code_executor_service.py  dashboard_collaboration_service.py  dashboard_service.py  postgres_service.py  schema_service.py
backend/app/analytics/utils/: excelCleaner.py  generateDFContent.py
backend/app/auth/api/: dto.py  handlers.py  routes.py
backend/app/auth/entity/: entity.py
backend/app/auth/service/: auth_service.py
backend/app/chat/adapter/: llm_client.py
backend/app/chat/api/: dependency.py  dto.py  handlers.py  routes.py  stream_models.py
backend/app/chat/docs/: database_context_handling.md
backend/app/chat/entity/: chat.py
backend/app/chat/repository/: README.md  chat_repository.py
backend/app/chat/service/: chat_service.py  completion_service.py  service.py  util.py
backend/app/code_execution/: README.md  tes.py
backend/app/code_execution/adapter/: lambda_adapter.py
backend/app/code_execution/api/: dependencies.py  dto.py  handlers.py  routes.py
backend/app/code_execution/client/: http_client.py
backend/app/code_execution/entity/: aggregates.py  code_execution_entity.py  value_objects.py
backend/app/code_execution/repository/: execution_repository.py
backend/app/code_execution/scripts/: codeGeneration.py
backend/app/code_execution/service/: execution_service.py  queue_service.py  service.py
backend/app/integrations/: README.md
backend/app/integrations/adapter/: integration_client.py
backend/app/integrations/api/: dependency.py  dto.py  handlers.py  routes.py
backend/app/integrations/entity/: entity.py  value_object.py
backend/app/integrations/repository/: integration_repository.py
backend/app/integrations/service/: integration_service.py
backend/app/knowledge_base/adapter/: integration_adapter.py
backend/app/knowledge_base/entity/: entity.py
backend/app/knowledge_base/event_handler/: handler.py  subscriber_worker.py
backend/app/knowledge_base/repository/: neo4j_repository.py  sql_repository.py
backend/app/knowledge_base/service/: ingestion_service.py  service.py
backend/app/middleware/: auth.py
backend/app/pal/: README.md
backend/app/pal/analytics/: README.md  __init__.py  analytics_workflow.py
backend/app/tokens/: exceptions.py
backend/app/tokens/api/: dependencies.py  dto.py  handler.py  routes.py
backend/app/tokens/entities/: entity.py  stripe_value_objects.py  value_objects.py
backend/app/tokens/repository/: repository.py
backend/app/tokens/scripts/: consumeTokens.py  increaseTokens.py
backend/app/tokens/service/: service.py
backend/app/user/api/: dto.py  handlers.py  routes.py
backend/app/user/entities/: aggregate.py  entity.py  value_objects.py
backend/app/user/repository/: user_repository.py
backend/app/user/service/: user_service.py
backend/cmd_server/: __init__.py
backend/cmd_server/code_execution_server/: container.py  main.py
backend/cmd_server/server/: container.py  dependencies.py  main.py
backend/cmd_server/worker/: README.md  main.py
backend/conf/: config.py  config.yaml
backend/docker/: Dockerfile
backend/docker/code_execution/: Dockerfile
backend/docs/: async_chart_generation_implementation.md  uv_project_manager.md
backend/integration_clients/postgres/: client.py  types.py
backend/mipal-ui-upfront-analytics/: .prettierignore  .prettierrc  README.md  claude.txt  docker-compose.yml  next.config.js  package-lock.json  tailwind.config.js
backend/mipal-ui-upfront-analytics/.github/workflows/: build-deploy-app.yml  build-prod-app.yml  deploy-prod
backend/mipal-ui-upfront-analytics/docker/: Dockerfile  Dockerfile-dev
backend/mipal-ui-upfront-analytics/messages/: es.json  sv.json
backend/mipal-ui-upfront-analytics/public/.well-known/: microsoft-identity-association.json
backend/mipal-ui-upfront-analytics/src/: middleware.ts
backend/mipal-ui-upfront-analytics/src/app/: ChatMessage.tsx  layout.tsx  page.tsx  providers.tsx
backend/mipal-ui-upfront-analytics/src/components/: ThemeSelector.tsx
backend/mipal-ui-upfront-analytics/src/constants/: pricing.ts
backend/mipal-ui-upfront-analytics/src/contexts/: ThemeContext.tsx
backend/mipal-ui-upfront-analytics/src/hooks/: useDebounce.ts
backend/mipal-ui-upfront-analytics/src/i18n/: request.ts
backend/mipal-ui-upfront-analytics/src/store/: reducers.ts  store.ts
backend/mipal-ui-upfront-analytics/src/styles/: globals.css
backend/mipal-ui-upfront-analytics/src/types/: auth.d.ts  custom.d.ts  next-auth.d.ts
backend/pkg/auth_token_client/: client.py
backend/pkg/db_util/: neo4j_conn.py
backend/pkg/email_templates/: password_reset_otp.py  signup_otp.py
backend/pkg/kms/: kms_client.py  local_kms_client.py
backend/pkg/lambda_service/: lambda_client.py
backend/pkg/llm_provider/: llm_client.py
backend/pkg/pub_sub/: publisher.py  subscriber.py
backend/pkg/s3/: s3_client.py
backend/pkg/smtp_client/: client.py
backend/pkg/sqs/: client.py
backend/pkg/util/: file_content_extractor.py  generate_colour.py  pydantic_to_dict.py  vaidate_email.py
(+312 files in other folders)
